--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       depends_on:
         - db
       healthcheck:
-        test: ["curl", "--fail", "-s", "http://localhost:8080/", "||", "exit 1"]
+        test: ["CMD", "curl", "--fail", "-s", "http://localhost:8080/", "||", "exit 1"]
         interval: 1m30s
         timeout: 10s
         retries: 3
