--- a/docker-env/geoserver.env
+++ b/docker-env/geoserver.env
@@ -8,6 +8,6 @@ GEOSERVER_ADMIN_PASSWORD=myawesomegeoserver
 INITIAL_MEMORY=2G
 MAXIMUM_MEMORY=4G
 XFRAME_OPTIONS='false'
-STABLE_EXTENSIONS=vectortiles-plugin,wps-plugin,printing-plugin,importer-plugin
+STABLE_EXTENSIONS=vectortiles-plugin,wps-plugin,printing-plugin,importer-plugin,backup-restore-plugin
 SAMPLE_DATA=true
 GEOSERVER_CSRF_DISABLED=true
